updated properties fiel